# cc

./: .claudeignore  .gitignore  Makefile  Makefile.prod  ecosystem.config.js  setup.sh
back/: .env.example  .gitignore  Cargo.toml
back/src/: main.rs
back/src/db/: mod.rs
mavrickcc/: .env.example  .gitignore  README.md  package-lock.json  package.json
mavrickcc/src/: app.html
mavrickcc/src/lib/: index.ts
mavrickcc/src/lib/js/: beaucamps-le.js  transition.js
mavrickcc/src/routes/: +layout.svelte  +page.svelte
