[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "3", features = ["kv-rocksdb"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }